--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    \n",
+    "    neighbor_distance = second_\n",
     "        distances = \n",
     "        neighbors.append(distances)\n",
     "    "
