Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,9 +435,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    neighbor_distance = second_\n",
-    "        distances = \n",
-    "        neighbors.append(distances)\n",
+    "    neighbor_distance = second_neighbor\n",
+    "    \n",
     "    "
    ]
   },
