--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,8 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    neighbor_distance = second_neighbor\n",
     "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
-    "    neighbor_distance ['distance']\n",
+    "    neighbor_distance ['distance'] = distance\n",
+    "    ret\n",
     "    "
    ]
   },
