--- a/index.ipynb
+++ b/index.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,23 +437,27 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    neighbor_distance = second_neighbor\n",
     "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
-    "    neighbor_distance ['distance'] = distance\n",
+    "    neighbor_distance ['test'] = distance\n",
     "    return neighbor_distance\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
+       "{'name': 'Natalie',\n",
+       " 'avenue': 5,\n",
+       " 'street': 4,\n",
+       " 'distance': 4.123105625617661,\n",
+       " 'test': 4.123105625617661}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
