Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -449,9 +449,8 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    neighbor_distance = second_neighbor\n",
     "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
-    "    \n",
-    "    return neighbor_distance\n",
-    "distance_with_neighbor.pop('test')"
+    "    neighbor_distance ['distance'] = distance\n",
+    "    return neighbor_distance"
    ]
   },
   {
