--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -482,7 +482,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    not_first = list(map(lamb))"
+    "    not_fri"
    ]
   },
   {
