--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    not_first = list(map(lambda neighbors: neighbors != first_neighbor, neighbors))\n",
-    "    return list(map(lambda ))"
+    "    return list(map(lambda neighbors: ))"
    ]
   },
   {
