Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -475,18 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    not_first = list(map(lambda neighbors: neighbors != first_neighbor, neighbors))\n",
+    "    not_first = list(filter(lambda neighbors: neighbors != first_neighbor, neighbors))\n",
     "    return list(map(lambda neighbors: distance_with_neighbor, first_neighbor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        " <function __main__.distance_with_neighbor(first_neighbor, second_neighbor)>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
