Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    not_first = list(filter(lambda neighbors: neighbors != first_neighbor, neighbors))\n",
-    "    return list(map(lambda neighbors: distance_with_neighbor(first_neighbor, second_neighbor), first_neighbor))"
+    "    return list(map(lambda neighbors: distance_with_neighbor(first_neighbor, neighbors), first_neighbor))"
    ]
   },
   {
